# Prometheus

./: .coverage  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  KANBAN.md  LICENSE.md  MANIFEST.in  README.md  coverage.xml  cryptography.py  messages.py  mkdocs.yml  prometheus.py  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/adr/: 0001-hexagonal-architecture.md  0002-crypto-v1-legacy-immutable.md  0003-crypto-v2-modern.md  0004-storage-backend-abstraction.md
prometheus/: main.py
prometheus/wallpapers/: skull.txt
prometheus_crypto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/prometheus/: __init__.py
src/prometheus/adapters/: __init__.py
src/prometheus/adapters/cli/: __init__.py
src/prometheus/adapters/config/: __init__.py
src/prometheus/adapters/crypto/: __init__.py
src/prometheus/adapters/keyring/: __init__.py
src/prometheus/adapters/platform/: __init__.py
src/prometheus/adapters/storage/: __init__.py
src/prometheus/cipher/: __init__.py  factory.py
src/prometheus/cipher/v1_legacy/: __init__.py  adapter.py
src/prometheus/cipher/v2_modern/: __init__.py  adapter.py
src/prometheus/cli/: __init__.py  app.py
src/prometheus/cli/commands/: __init__.py  audit.py  bench.py  config.py  migrate.py  storage.py
src/prometheus/config/: __init__.py  adapter.py
src/prometheus/core/: __init__.py
src/prometheus/core/entities/: __init__.py
src/prometheus/core/events/: __init__.py
src/prometheus/core/ports/: __init__.py
src/prometheus/core/use_cases/: __init__.py
src/prometheus/core/value_objects/: __init__.py
src/prometheus/domain/: __init__.py  entities.py  events.py  ports.py  value_objects.py
src/prometheus/migration/: migrator.py
src/prometheus/platform/: __init__.py
src/prometheus/storage/: __init__.py  adapter.py
src/prometheus/storage/backends/: __init__.py
tests/: conftest.py
tests/cli/: test_cli_app.py
tests/contract/: test_crypto_port.py
tests/integration/: test_encrypt_decrypt_roundtrip.py
tests/unit/config/: test_toml_adapter.py
tests/unit/crypto/: test_factory.py  test_v1_legacy.py  test_v2_modern.py
tests/unit/domain/: test_entities.py  test_value_objects.py
tests/unit/migration/: test_migrator.py
tests/unit/storage/: test_file_adapter.py
tests/vectors/: v1_legacy.json
