[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "prometheus-crypto"
version = "2.0.0.dev0"
description = "World-class CLI for symmetric encryption of secrets - legacy v1 compatible, modern v2 secure"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "keyring>=25.0",
    "pyyaml>=6.0",
    "platformdirs>=4.2",
    "typing_extensions>=4.6",
    "tomli_w>=1.0",
]

[project.optional-dependencies]
crypto = [
    "cryptography>=42.0",
    "argon2-cffi>=23.1",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-mock>=3.14",
    "hypothesis>=6.92",
    "ruff>=0.5",
    "mypy>=1.10",
    "codespell>=2.4",
    "pre-commit>=3.7",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "mutmut>=2.4",
]

[project.scripts]
prometheus = "prometheus.cli.app:app"

[project.urls]
Homepage = "https://github.com/Kemquiros/Prometheus"
Documentation = "https://kemquiros.github.io/Prometheus/"
Repository = "https://github.com/Kemquiros/Prometheus"
Issues = "https://github.com/Kemquiros/Prometheus/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/prometheus"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
extras = ["crypto", "dev"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "C4", "C9", "D", "DTZ", "EXE", "ISC", "ICN", "PIE", "PT", "Q", "RUF", "RET", "SIM", "T10", "T20", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RSE", "A", "B", "C", "COM", "G", "PERF", "S", "TD", "TID"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "S101", "ARG001", "ARG002"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S108", "S110", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D401", "B017", "PT011", "SIM105", "SIM115", "PLR2004", "PLC0415", "E501", "TC001", "TC003", "PTH123"]
"docs/**/*.py" = ["D100", "D101", "D102", "D103"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
packages = ["prometheus"]

[[tool.mypy.overrides]]
module = ["prometheus.*"]

[[tool.mypy.overrides]]
module = ["tomllib", "tomli_w"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "-ra", "--cov=prometheus", "--cov-report=term-missing", "--cov-report=xml", "--cov-fail-under=90"]
markers = ["unit: Unit tests", "integration: Integration tests", "contract: Contract tests for ports", "slow: Slow tests", "crypto: Crypto-specific tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]

[tool.coverage.run]
source = ["prometheus"]
omit = ["tests/**", "**/__main__.py"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if __name__ == .__main__.:"]
show_missing = true
precision = 2

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.setuptools.package-dir]
"" = "src"